umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_6_fused_tetrahydrooctaazanaphthalene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["N#h#n" "N#n" "N#n" "N#h#n" "C" "C" "N#h#n" "N#n" "N#n" "N#h#n"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :double]
        [2 3 :single]
        [3 4 :single]
        [4 9 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :single]
        [7 8 :double]
        [8 9 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["N#h#n" "N#n" "N#n" "N#h#n" "C" "C" "N#h#n" "N#n" "N#n" "N#h#n"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :double]
        [2 3 :single]
        [3 4 :single]
        [4 9 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :single]
        [7 8 :double]
        [8 9 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["N#h#n" "N#n" "N#n" "N#h#n" "C" "C" "N#h#n" "N#n" "N#n" "N#h#n"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :double]
        [2 3 :single]
        [3 4 :single]
        [4 9 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :single]
        [7 8 :double]
        [8 9 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["N#h#n" "N#n" "N#n" "N#h#n" "C" "C" "N#h#n" "N#n" "N#n" "N#h#n"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :double]
        [2 3 :single]
        [3 4 :single]
        [4 9 :single]
        [4 5 :double]
        [5 6 :single]
        [6 7 :single]
        [7 8 :double]
        [8 9 :single]]}
    :success true
    :tie-breaks []}}
