umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_6_membered_1,4-dithiane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["S#n2" "C#h2" "C#h2" "S#n2" "C#h2" "C#h2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [0 5 :single]]}
    :success true
    :tie-breaks [1 2 4 5]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      1 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      2 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      4 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      5 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["S#n2" "C#h2" "C#h2" "S#n2" "C#h2" "C#h2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [0 5 :single]]}
    :success true
    :tie-breaks [1 2 4 5]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      1 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      2 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      4 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      5 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]}}}
