umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_6_membered_4-pyranone.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [{:atoms [1 2 3 4 5 6] :attrs "[0,1,1,2,1,1]"}]
      :atoms ["O#n2" "C" "C#h" "C#h" "O#n" "C#h" "C#h"]
      :bonds [
        [0 1 :double]
        [1 6 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :aromatic-systems [{:atoms [1 2 3 4 5 6] :attrs "[0,1,1,2,1,1]"}]
      :atoms ["O#n2" "C" "C#h" "C#h" "O#n" "C#h" "C#h"]
      :bonds [
        [0 1 :double]
        [1 6 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :aromatic-systems [{:atoms [1 2 3 4 5 6] :attrs "[0,1,1,2,1,1]"}]
      :atoms ["O#n2" "C" "C#h" "C#h" "O#n" "C#h" "C#h"]
      :bonds [
        [0 1 :double]
        [1 6 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :aromatic-systems [{:atoms [1 2 3 4 5 6] :attrs "[0,1,1,2,1,1]"}]
      :atoms ["O#n2" "C" "C#h" "C#h" "O#n" "C#h" "C#h"]
      :bonds [
        [0 1 :double]
        [1 6 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]]}
    :success true
    :tie-breaks []}}
